--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   lottie: ^3.3.2
   sensors_plus: ^5.0.0
 
+  image_picker: ^1.0.7
+  firebase_storage: ^13.0.4
+
+
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +78,7 @@ flutter:
 
   assets:
     - assets/images/turf_bg.png
+    - assets/images/default_user.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
