--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  permission_handler: ^11.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -50,6 +51,8 @@ dependencies:
 
   image_picker: ^1.0.7
   firebase_storage: ^13.0.4
+
+
 
 
 
