--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  permission_handler: ^11.1.0
+  permission_handler: ^11.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -51,6 +51,15 @@ dependencies:
 
   image_picker: ^1.0.7
   firebase_storage: ^13.0.4
+
+  #LOCATION
+  geolocator: ^11.0.1
+  geocoding: ^3.0.0
+
+#  flutter_vibrate: ^1.3.0
+#  vibration: ^1.9.0
+#  flutter_haptic: ^2.0.3
+
 
 
 
@@ -82,6 +91,7 @@ flutter:
   assets:
     - assets/images/turf_bg.png
     - assets/images/default_user.png
+    - assets/images/loc_bg.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
