slot booking page added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,19 +30,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   permission_handler: ^11.4.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
-  # Firebase packages MUST be here
+#  # Firebase packages MUST be here
+#  firebase_core: ^4.2.1
+#  firebase_auth: ^6.1.2
+##  firebase_auth_platform_interface: ^8.1.4
+#  google_sign_in: ^6.2.1
+#  sign_in_with_apple: ^7.0.1
+#  cloud_firestore: ^5.4.4
+
+    # Firebase
   firebase_core: ^4.2.1
   firebase_auth: ^6.1.2
-  firebase_auth_platform_interface: ^8.1.4
+  cloud_firestore: ^6.1.0
+  firebase_storage: ^13.0.4
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^7.0.1
+
+
+
 
   intl_phone_field: ^3.2.0
   flutter_riverpod: ^2.6.1
@@ -50,7 +59,6 @@ dependencies:
   sensors_plus: ^5.0.0
 
   image_picker: ^1.0.7
-  firebase_storage: ^13.0.4
 
   #LOCATION
   geolocator: ^11.0.1
